# pricewatch

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENT_PROMPT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  IMPROVEMENT_PLAN.md  LICENSE  README.md  SECURITY.md  SETUP_GUIDE.md  alembic.ini  create_migration.bat  docker-compose.prod.yml  docker-compose.yml  encryption.key  pricewatch.db  pyproject.toml  quick_setup.py  requirements.txt  retry_migration.py  setup_improvements.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
app/: __init__.py  alerts.py  config.py  context.py  csrf.py  database.py  exceptions.py  logging_config.py  main.py  models.py  monitoring.py  scheduler.py  schemas.py  scraper.py  security.py
app/services/: __init__.py  base.py  notification_service.py  profile_service.py  scheduler_service.py  tracker_service.py
app/static/: styles.css
app/templates/: base.html  index.html  tracker.html  tracker_edit.html
app/templates/admin/: profile_form.html  profiles.html
archive/: IMPROVEMENTS.md  fix_migrations.bat  fix_migrations.ps1  fix_setup.py  manual_setup.py  setup.bat  test_setup.py
docs/: CHANGELOG.md  CONTRIBUTING.md  FEATURE_ROBOTS_TXT.md  SETUP_GUIDE.md
migrations/: script.py.mako
migrations/versions/: b25a5fa60b7a_initial_migration.py
tests/: conftest.py  test_api.py  test_base_service.py  test_csrf_extended.py  test_database.py  test_exception_handlers.py  test_integration.py  test_monitoring.py  test_notifications.py  test_price_parsing.py  test_price_regex.py  test_scraper.py  test_security.py  test_services.py  test_tracker_service_extended.py
